# cift

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
docs/: BUGS.md  FRONTEND_ADAPT_AND_DOCKER_TASK.md  NODE_GATEWAY_TASK.md  PROGRESS.md  SPEC.md
docs/inference/: dify-external-knowledge-api.md
docs/tasks/: 002-frontend-redesign.md  004-parser-pdf-word.md  015-open-api.md  (+16 more)
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
services/python/: .dockerignore  Dockerfile  pyproject.toml
services/python/app/: main.py
services/python/app/models/: __init__.py  schemas.py
services/python/app/routers/: __init__.py  chat.py  chunk_configs.py  chunking.py  chunks.py  documents.py  export.py  kbs.py  knowledge_graphs.py  model_configs.py  parse.py  prompts.py  qa.py  retrieval.py  search.py  upload.py  vectors.py
services/python/app/services/: __init__.py  bm25.py  chroma_client.py  chunker.py  database.py  minio_client.py
services/python/app/services/embedding/: __init__.py  base.py  dummy_provider.py  factory.py  llama_cpp_provider.py  mlx_provider.py  ollama_provider.py  openai_provider.py
services/python/app/services/llm/: __init__.py  base.py  factory.py  openai_client.py
services/python/app/services/parser/: __init__.py  base.py  csv_parser.py  docx_parser.py  json_parser.py  markdown_parser.py  pdf_parser.py  txt_parser.py
services/python/app/services/rerank/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
services/python/app/utils/: __init__.py  config.py  logger.py
(+40 files in other folders)
