[project]
name = "cift-python"
version = "0.1.0"
description = "CIFT Python service — document parsing, chunking, embedding & vector search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "chromadb>=1.0.0",
    "minio>=7.2.0",
    "openai>=1.60.0",
    "python-multipart>=0.0.26",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.21.0"]
llama-cpp = ["llama-cpp-python>=0.3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",  # for TestClient
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
